--- a/secure/src/main/resources/application.properties
+++ b/secure/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=wallet-secure
-spring.datasource.url=jdbc:mysql://localhost:3307/wallet_secure_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=root
+# H2 Configuration for instant launch
+spring.datasource.url=jdbc:h2:mem:wallet_secure_db_clean
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # File Upload Limits
 # File Upload Limits
@@ -12,3 +15,4 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 server.tomcat.max-http-post-size=100MB
 server.tomcat.max-swallow-size=100MB
+server.port=8081
