--- a/secure/src/main/resources/application.properties
+++ b/secure/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.servlet.multipart.max-request-size=50MB
 server.tomcat.max-http-post-size=100MB
 server.tomcat.max-swallow-size=100MB
 server.port=8081
+
+# Email Configuration (SMTP)
+# Rellenar con los datos reales para que funcione el envio de correos
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tu_email@gmail.com
+spring.mail.password=tu_contraseña_generada_app
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
