--- a/secure/src/main/resources/application.properties
+++ b/secure/src/main/resources/application.properties
@@ -14,10 +14,14 @@ server.tomcat.max-swallow-size=100MB
 server.port=8081
 
 # Email Configuration (SMTP)
-# Rellenar con los datos reales para que funcione el envio de correos
+# IMPORTANTE: Debes generar una "Contraseña de Aplicación" desde tu cuenta de Google
+# Ve a: https://myaccount.google.com/security -> Verificación en 2 pasos -> Contraseñas de aplicaciones
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tu_email@gmail.com
-spring.mail.password=tu_contraseña_generada_app
+spring.mail.username=guarinosmanuel07@gmail.com
+spring.mail.password=dfvz hdge qucp vgpu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
