--- a/secure/src/main/resources/application.properties
+++ b/secure/src/main/resources/application.properties
@@ -22,6 +22,11 @@ spring.mail.username=guarinosmanuel07@gmail.com
 spring.mail.password=dfvz hdge qucp vgpu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+
+# Mejorar gestión de errores
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
