--- a/wallet-web/src/main/resources/application.properties
+++ b/wallet-web/src/main/resources/application.properties
@@ -6,8 +6,13 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 server.tomcat.max-http-post-size=100MB
 server.tomcat.max-swallow-size=100MB
-server.port=8080
+
+# --- CAMBIO IMPORTANTE: Puerto 8083 para el Frontend ---
+server.port=8083
+
+# Conexión con el Backend (API)
 app.api.url=http://localhost:8081/api
+
 # Handle Ngrok Proxy Headers correctly
 server.forward-headers-strategy=framework
 
